# RG61-stado

./: CMakeLists.txt  Makefile  README.md  Stado_BeginnerVersion_Main  Stado_BeginnerVersion_Main.c  colors.h  inits.c  inits.h  only_test.c  program
3D-models/: README.md  draw_star.c  frame_for_making_model.c  hedge.c  scythe.c  sheep.c
src/: Makefile  Stado_develope_version.c  callbacks.c  callbacks.h  colors.h  draw_objects.c  draw_objects.h  game_dynamics.c  game_dynamics.h  inits.c  inits.h  levels.h  light_and_materials.c  light_and_materials.h  sheep.c  sheep.h
